Style mobile version of homepage

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="./styles/fonts.css">
     <script src="https://kit.fontawesome.com/a5c4f7a4d5.js" crossorigin="anonymous"></script> <!-- Font awesome for icons-->
     <link rel="stylesheet" href="./styles/base.css">
+    <link rel="stylesheet" href="./styles/base-mobile.css" media="(max-width: 600px)">
     <link rel="stylesheet" href="./styles/inicio.css">
+    <link rel="stylesheet" href="./styles/inicio-mobile.css" media="(max-width: 600px)">
     <script src="./scripts/base.js" defer></script>
 </head>
 <body>
