--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <img class="logo" src="./images/logo3.svg" alt="Libreros nutricion">
             <div class="title">ALFONSO LIBREROS NUTRIOLOGO</div>
         </div>
-        <div class="menu">
+        <div class="menu desktop">
             <div class="menu-item" data-page="index">Inicio</div>
-            <div class="menu-item" data-page="servicios">Servicios <span class="arrow"><i class="fa-regular fa-square-caret-down"></i></span></div>
+            <div class="menu-item" data-page="servicios"><span class="arrow"><i class="fa-regular fa-square-caret-down"></i></span>Servicios</div>
             <div class="menu-item" data-page="precios">Precios</div>
             <div class="menu-item" data-page="dr-libreros">Dr. Libreros</div>
             <div class="menu-item" data-page="contacto">Contacto</div>
@@ -35,6 +35,32 @@
             <p class="service-tab" data-page="diabetes">Diabetes</p>
             <p class="service-tab" data-page="cineantropometria">Cineantropometría</p>
         </div>
+    </div>
+    <div class="header-mobile">
+        <div class="logo-container">
+            <img class="logo" src="./images/logo3.svg" alt="Libreros nutricion">
+            <img class="logo-letters" src="./images/al-logotipo.svg" alt="Alfonso Libreros Nutriologo">
+        </div>
+        <div class="menu-mobile">
+                <i class="fa-solid fa-bars active"></i>
+                <i class="fa-solid fa-xmark"></i>
+        </div>
+    </div>
+    <div class="dropdown-mobile">
+        <div class="tab" data-page="index">Inicio</div>
+        <div class="tab"><span class="arrow"><i class="fa-regular fa-square-caret-down"></i></span>Servicios</div>
+        <div class="service-tabs">
+            <p class="tab" data-page="servicios">Todos</p>
+            <p class="tab" data-page="servicios/nutricion-clinica">Nutrición clínica</p>
+            <p class="tab" data-page="servicios/perdida-y-control-de-peso">Pérdida y control de peso</p>
+            <p class="tab" data-page="servicios/nutricion-deportiva">Nutrición deportiva</p>
+            <p class="tab" data-page="servicios/planes-de-entrenamiento">Planes de entrenamiento</p>
+            <p class="tab" data-page="servicios/diabetes">Diabetes</p>
+            <p class="tab" data-page="servicios/cineantropometria">Cineantropometría</p>
+        </div>
+        <div class="tab" data-page="precios">Precios</div>
+        <div class="tab" data-page="dr-libreros">Dr. Libreros</div>
+        <div class="tab" data-page="contacto">Contacto</div>
     </div>
     <div class="introduction-container">
         <div class="introduction">
@@ -145,7 +171,7 @@
     <div class="footer-container">
         <div class="footer">
             <img class="logo" src="./images/logo3.svg" alt="Libreros nutricion">
-            <div class="title">ALFONSO LIBREROS NUTRIOLOGO</div>
+            <img class="logo-letters" src="./images/al-logotipo.svg" alt="Alfonso Libreros Nutriologo">
         </div>
         <p>© 2024 EL Diseño</p>
         <div class="sns">
