Style mobile version of contacto page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="header-container">
         <div class="header">
             <img class="logo" src="./images/logo3.svg" alt="Libreros nutricion">
-            <div class="title">ALFONSO LIBREROS NUTRIOLOGO</div>
+            <div class="title">ALFONSO LIBREROS NUTRIÓLOGO</div>
         </div>
         <div class="menu desktop">
             <div class="menu-item" data-page="index">Inicio</div>
