chore: seo setup

--- a/app/index.html
+++ b/app/index.html
@@ -1,20 +1,94 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
+    <title>ALNutriologo | Nutriólogo en Ciudad de México</title>
+
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Alcanza tus metas de salud con planes de nutrición personalizados. Ofrezco consultas de nutrición clínica, deportiva y control de peso en la Ciudad de México. ¡Agenda tu cita hoy!"
+    />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.alnutriologo.com/" />
+    <meta
+      property="og:title"
+      content="ALNutriologo | Nutriólogo en Ciudad de México"
+    />
+    <meta
+      property="og:description"
+      content="Alcanza tus metas de salud con planes de nutrición personalizados en la Ciudad de México."
+    />
+    <meta
+      property="og:image"
+      content="https://www.alnutriologo.com/alnutriologo.png"
+    />
+
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://www.alnutriologo.com/" />
+    <meta
+      property="twitter:title"
+      content="ALNutriologo | Nutriólogo en Ciudad de México"
+    />
+    <meta
+      property="twitter:description"
+      content="Alcanza tus metas de salud con planes de nutrición personalizados en la Ciudad de México."
+    />
+    <meta
+      property="twitter:image"
+      content="https://www.alnutriologo.com/alnutriologo.png"
+    />
+
+    <link rel="canonical" href="https://www.alnutriologo.com/" />
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script
       src="https://kit.fontawesome.com/a5c4f7a4d5.js"
       crossorigin="anonymous"
     ></script>
-    <title>Vite + React</title>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "LocalBusiness",
+        "name": "ALNutriologo",
+        "image": "https://www.alnutriologo.com/alnutriologo.png",
+        "@id": "https://www.alnutriologo.com/",
+        "url": "https://www.alnutriologo.com/",
+        "telephone": "+52-55-4469-6861",
+        "priceRange": "200-700 MXN",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "2da cerrada de Concepción Beistegui #4-10",
+          "addressLocality": "Ciudad de México",
+          "postalCode": "03100",
+          "addressCountry": "MX"
+        },
+        "geo": {
+          "@type": "GeoCoordinates",
+          "latitude": 19.388321,
+          "longitude": -99.161109
+        },
+        "openingHoursSpecification": {
+          "@type": "OpeningHoursSpecification",
+          "dayOfWeek": ["Saturday", "Sunday"],
+          "opens": "10:00",
+          "closes": "20:00"
+        },
+        "servesCuisine": [],
+        "description": "Nutriólogo profesional en la Ciudad de México que ofrece planes de alimentación personalizados para control de peso, nutrición deportiva y manejo de enfermedades crónicas."
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
